# demo_engine

./: Cargo.toml  color.vert  color_and_texture.frag  color_and_texture.vert
.github/workflows/: ci.yml
demo_editor/: Cargo.toml
demo_editor/src/: main.rs
demo_engine/: Cargo.toml
demo_engine/src/: color.rs  lib.rs  types.rs
demo_engine/src/renderer/: mod.rs  ortographic_camera.rs  renderer2d.rs  vertex.rs
demo_sandbox/: Cargo.toml
demo_sandbox/src/: main.rs
