[package]
name = "demo_engine"
version = "0.1.0"
authors = ["KernelError <villainkernelerror@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.28.0"
glutin = "0.25.1"
glfw = "0.41.0"
glam = "0.10.0"
image = { git = "https://github.com/KernelErr0r/image" }
